--- a/roles/ops_user_setup/tasks/main.yml
+++ b/roles/ops_user_setup/tasks/main.yml
@@ -12,6 +12,15 @@
     groups: sudo
     append: yes
 
+- name: "Grant passwordless sudo to {{ ops_user }}"
+  ansible.builtin.copy:
+    dest: "/etc/sudoers.d/90-{{ ops_user }}"
+    content: "{{ ops_user }} ALL=(ALL) NOPASSWD:ALL\n"
+    owner: root
+    group: root
+    mode: "0440"
+    validate: "visudo -cf %s"
+
 - name: "Ensure .ssh directory exists for {{ ops_user }}"
   ansible.builtin.file:
     path: "/home/{{ ops_user }}/.ssh"
@@ -82,4 +91,3 @@
 
 - name: "Ping after SSH hardening to verify connection"
   ansible.builtin.ping:
-
