--- a/roles/ssh_users/tasks/main.yml
+++ b/roles/ssh_users/tasks/main.yml
@@ -1,22 +1,24 @@
 # roles/ssh_users/tasks/main.yml
 
+- name: "Validate ssh_users variable"
+  ansible.builtin.assert:
+    that:
+      - ssh_users is defined
+      - ssh_users | default([]) | type_debug == "list"
+    fail_msg: "Define ssh_users as a list before including the ssh_users role."
+
 - name: "Configure SSH users"
   ansible.builtin.debug:
     msg: "Users: {{ ssh_users | map(attribute='name') | list }}"
   when: ssh_users | length > 0
 
 # Create/update the users
-- name: "Ensure users exist and add extra groups"
-  ansible.builtin.user:
-    name: "{{ item.name }}"
-    state: present
-    create_home: yes
-    home: "{{ item.home | default(omit) }}"
-    groups: "{{ item.extra_groups | default([]) | join(',') }}"
-    append: true             # DO NOT overwrite groups
+- name: "Manage SSH users"
+  ansible.builtin.include_tasks: manage_user.yml
   loop: "{{ ssh_users }}"
   loop_control:
-    label: "{{ item.name }}"
+    loop_var: ssh_user
+    label: "{{ ssh_user.name }}"
 
 # Ensure .ssh directory
 - name: "Ensure .ssh directory exists"
@@ -36,6 +38,8 @@
     label: "{{ item.name }}"
 
 # Install keys
+# This method is better than the built-in ansible.posix.authorized_key because it also
+# handles removing keys that are no longer wanted.
 - name: "Write authorized_keys"
   ansible.builtin.copy:
     dest: "{{ user_home }}/.ssh/authorized_keys"
@@ -51,4 +55,3 @@
     - item.authorized_keys | length > 0
   loop_control:
     label: "{{ item.name }}"
-
