--- a/roles/ops_user_setup/defaults/main.yml
+++ b/roles/ops_user_setup/defaults/main.yml
@@ -1,6 +1,8 @@
 # roles/secure_ssh/defaults/main.yml
 
 ops_user: ops
+ops_user_home: /home/ops
+ops_user_shell: /bin/bash
 
 # List of public keys (strings) to install for ops user
 ops_authorized_keys: []
@@ -13,4 +15,3 @@ ssh_disable_root_login: true
 
 # Path to sshd_config (Debian/Ubuntu default)
 sshd_config_path: /etc/ssh/sshd_config
-
