--- a/roles/ops_user_setup/tasks/main.yml
+++ b/roles/ops_user_setup/tasks/main.yml
@@ -4,6 +4,9 @@
   ansible.builtin.user:
     name: "{{ ops_user }}"
     state: present
+    home: "{{ ops_user_home }}"
+    shell: "{{ ops_user_shell }}"
+    create_home: true
   # You can remove this if you fully trust the bootstrap script
 
 - name: "Ensure ops user is in sudo group"
@@ -23,7 +26,7 @@
 
 - name: "Ensure .ssh directory exists for {{ ops_user }}"
   ansible.builtin.file:
-    path: "/home/{{ ops_user }}/.ssh"
+    path: "{{ ops_user_home }}/.ssh"
     state: directory
     owner: "{{ ops_user }}"
     group: "{{ ops_user }}"
